more work on mobile UI